Bug 171079. Typeaheadfind::findnext overriding regular find next when it shouldn't. r=akkana, sr=sfraser